--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
   <div class="card">
-    <img src="./images/illustration-hero.svg" alt="illustration" class="illustration">
+    <img src="images/illustration-hero.svg" alt="illustration" class="illustration">
     <div class="text-container">
       <h1>Order Summary</h1>
 
